--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
      <link rel="stylesheet" type="text/css" href="./styles.css" />
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -50,8 +50,7 @@
                             <div class="fav"><i class="far fa-bookmark  fa-1x"></i></div>
                         </div>
                         <div class="item">Liked by <b>4GeeksAcademy, html5, Web</b> and <b>100,000</b> others </div>
-                        <div class="item2">Japón es una obsesión en mi casa y hace unos años tuvimos la oportunidad de estar un mes descubriéndolo.
-                        Excursión al Fuji incluída.
+                        <div class="item2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                         </div>
                     </footer>
                 </div>
